# Promatch

./: .gitignore  CMakeLists.txt  README.md
PromatchPredecoder/include/: bb_benchmark.h  bucket_based_simulation.h  error_event.h  experiments.h  predecoder.h  predecoding_graph_helper.h  syndrome_surgery.h
PromatchPredecoder/src/: bb_benchmark.cpp  bucket_based_simulation.cpp  error_event.cpp  experiments.cpp  main.cpp  plots.ipynb  predecoder.cpp  predecoding_graph_helper.cpp  revision_plots.ipynb  syndrome_surgery.cpp  test  weight_matrix.txt
PromatchPredecoder/src/.ipynb_checkpoints/: plots-checkpoint.ipynb  revision_plots-checkpoint.ipynb
quarch/: CMakeLists.txt
quarch/blossom5/: CMakeLists.txt  PerfectMatching.h
quarch/blossom5/MinCost/: instances.inc
quarch/dramsim2/: CMakeLists.txt
quarch/dramsim3/: CMakeLists.txt
quarch/dramsim3/src/: common.h  controller.cc  controller.h  dram_system.cc  dram_system.h  memory_system.h  rhtracker.cc  rhtracker.h
quarch/include/: astrea.h  benchmark.h  decoder.h  decoding_graph.h  defs.h  fleece.h  mwpm_decoder.h  tmr_decoder.h
quarch/include/astrea/: mld_decoder.h  simulator.h
quarch/include/benchmark/: statbench.h
quarch/include/fleece/: hldecoder.h  lattice_graph.h  rtanalysis.h
quarch/include/graph/: dijkstra.h
quarch/src/: astrea.cpp  benchmark.cpp  decoder.cpp  decoding_graph.cpp  defs.cpp  fleece.cpp  mwpm_decoder.cpp  tmr_decoder.cpp
quarch/src/astrea/: mld_decoder.cpp  simulator.cpp
quarch/src/fleece/: hldecoder.cpp  lattice_graph.cpp  rtanalysis.cpp
quarch/stim/: CMakeLists.txt
quarch/stim/src/: stim.h
quarch/stim/src/stim/circuit/: gate_data_annotations.cc  gate_data_controlled.cc  gate_data_noisy.cc  gate_data_pauli.cc
quarch/stim/src/stim/io/: measure_record_reader.cc  measure_record_reader.h  raii_file.h
quarch/stim/src/stim/mem/: simd_bit_table.cc  simd_bit_table.h  simd_bits_range_ref.h  simd_compat.h
quarch/stim/src/stim/simulators/: detection_simulator.cc  detection_simulator.h  frame_simulator.cc  frame_simulator.h
scripts/: all_LERs_1x.sh  sensitivity.sh  test.sh
